<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TUTE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登陆</string>
    <string name="news">通知</string>
    <string name="lottery">抽奖</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="fresh">刷新</string>
    <string name="activity">活动</string>
    <string name="register">注册</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>

    <string-array name="day_of_week">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
    </string-array>
    <string-array name="course_of_day">
        <item>12节</item>
        <item>34节</item>
        <item>56节</item>
        <item>78节</item>
        <item>晚上</item>
    </string-array>

    <string-array name="user_type">
        <item>学生</item>
        <item>新生</item>
        <item>家长</item>
    </string-array>
    
    <string-array name="menu_me">
        <item>成绩查询</item>
        <item>四六级查询</item>
        <item>我要请假</item>
        <item>个人设置</item>
    </string-array>

</resources>