<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    
    <TableLayout 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/white">

        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView 
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/blue_main"
                android:textStyle="bold"
                android:text="@string/mon"/>
            <TextView 
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/blue_main"
                android:textStyle="bold"
                android:text="@string/tue"/>
            <TextView 
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/blue_main"
                android:textStyle="bold"
                android:text="@string/wed"/>
            <TextView 
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/blue_main"
                android:textStyle="bold"
                android:text="@string/thu"/>
            <TextView 
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/blue_main"
                android:textStyle="bold"
                android:text="@string/fri"/>
        </TableRow>
    </TableLayout>
    
    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:background="#19000000"/> 

<GridView 
    android:id="@+id/gv_classtable"
    android:numColumns="5"  
    android:stretchMode="columnWidth"
    android:horizontalSpacing="0dp"
    android:verticalSpacing="1dp"
    android:background="#19000000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/space" 
    >
</GridView>
    
        

</RelativeLayout>