<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_32"
            android:drawablePadding="8dp"
            android:hint="@string/account"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password_32"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:password="true" />

        <Spinner
            android:id="@+id/sp_user"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="6dp" />

        <Button 
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            />
    </LinearLayout>

</RelativeLayout>